@@ -1,4 +1,4 @@
-dnl ## $Id: configure.in,v 1.396.2.88 2003/11/29 13:35:32 sniper Exp $ -*- sh -*-
+dnl ## $Id: configure.in,v 1.396.2.89 2003/12/01 16:12:36 sniper Exp $ -*- sh -*-
 dnl ## Process this file with autoconf to produce a configure script.
 
 divert(1)
@@ -900,6 +900,8 @@ unset LIBS LDFLAGS
 
 test "$prefix" = "NONE" && prefix=/usr/local
 test "$exec_prefix" = "NONE" && exec_prefix='${prefix}'
+test "$program_prefix" = "NONE" && program_prefix=
+test "$program_suffix" = "NONE" && program_suffix=
 
 case $libdir in
   '${exec_prefix}/lib')
@@ -1025,6 +1027,8 @@ PHP_SUBST_OLD(php_abs_top_srcdir)
 
 PHP_SUBST(bindir)
 PHP_SUBST(exec_prefix)
+PHP_SUBST(program_prefix)
+PHP_SUBST(program_suffix)
 PHP_SUBST(includedir)
 PHP_SUBST(libdir)
 PHP_SUBST(mandir)
