@@ -1,5 +1,5 @@
 dnl
-dnl $Id: config.m4,v 1.11.2.5 2003/09/08 13:10:34 sniper Exp $
+dnl $Id: config.m4,v 1.11.2.6 2003/12/01 16:12:40 sniper Exp $
 dnl
 
 AC_MSG_CHECKING(for CLI build)
@@ -30,7 +30,7 @@ if test "$PHP_SAPI_CLI" != "no"; then
     BUILD_CLI="\$(LIBTOOL) --mode=link \$(CC) -export-dynamic \$(CFLAGS_CLEAN) \$(EXTRA_CFLAGS) \$(EXTRA_LDFLAGS_PROGRAM) \$(LDFLAGS) \$(PHP_RPATHS) \$(PHP_GLOBAL_OBJS) \$(PHP_CLI_OBJS) \$(EXTRA_LIBS) \$(ZEND_EXTRA_LIBS) -o \$(SAPI_CLI_PATH)"
     ;;
   esac
-  INSTALL_CLI="\$(mkinstalldirs) \$(INSTALL_ROOT)\$(bindir); \$(INSTALL) -m 0755 \$(SAPI_CLI_PATH) \$(INSTALL_ROOT)\$(bindir)/php"
+  INSTALL_CLI="\$(mkinstalldirs) \$(INSTALL_ROOT)\$(bindir); \$(INSTALL) -m 0755 \$(SAPI_CLI_PATH) \$(INSTALL_ROOT)\$(bindir)/\$(program_prefix)php\$(program_suffix)"
 
   PHP_SUBST(BUILD_CLI)
   PHP_SUBST(INSTALL_CLI)
